css/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
*,*::after,*::before{
    margin: 0;
    padding: 0;
    box-sizing: content-box;
}

html{
    font-size: 16px;
    box-sizing: inherit;
    font-family: 'Roboto', sans-serif;
}
a{
    margin-top: .25rem;
    font-size: .75rem;
}
body{
    text-align: center;
    padding-top: 3rem;
}
footer{
    margin-top: 1rem;
    display: flex;
    width: 100%;
    justify-content: center;
    flex-direction: column;
    align-items: center;
    padding: 1em;
    font-size: .95em;
    text-align: center;
}

.container{
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
}
.numbers{
    display: grid;
    grid-template-columns: repeat(5,1fr);
    gap: 5px;
    background-color: black;
    padding: 0 5px 5px 5px;
    box-shadow: 5px 5px 5px rgb(100, 100, 100);
    border-radius: 0 0 5px 5px;
    padding: 10px;
    padding-top: 15px;
}
.screen{
    width: 260px;
    padding:10px 15px 0px 15px;
    font-size: 16px;
    text-align: right;
    color: #fff;
    background-color: black;
    box-shadow: 5px 6px 5px rgb(100, 100, 100);
    border-radius: 5px 5px 0 0;
}
.screen p {
    margin: 0;
    background-color: rgb(53, 200, 53);
    color: #000;
    padding: 10px;
    font-weight: bold;
}
.btn{
    min-width: 50px;
    min-height: 50px;
    border: 0;
    background-color: #fff;
    font-size: 16px;
    border-radius: 5px;
    cursor: pointer;
}
.btn:hover{
   background-color: rgb(214, 214, 214);
}
.zero{
    grid-area: 4/1/4/3;
}
.clear{
    grid-area: 1/4/1/5;
    background-color: red;
    color: #fff;
    font-weight: bold;
}
.del{
    background-color: red;
    color: #fff;
    font-weight: bold;
}
.clear:hover, .del:hover{
    background-color: rgba(255, 0, 0, 0.795);
}
.equal{
    grid-area: 4/4/4/6;
}

